# mjpg-streamer

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: build-test.yml  build.yml  rust.yml
src/: main.rs  single.backup.rs
