[package]
name = "mjpg-streamer"
version = "0.9.0"
edition = "2021"
authors = ["dchansen06"]
description = "A jpg streamer that supports snapshots and streams, designed with octoprint in mind"
readme = "README.md"
repository = "https://github.com/dchansen06/mjpg-streamer/"
license = "GPL-3.0-or-later"
publish = false
categories = ["command-line-utilities", "encoding", "multimedia::video", "network-programming", "web-programming::http-server"]
keywords = ["octoprint", "mjpg", "jpg", "stream", "camera"]

[dependencies]
clap = { version = "4.5.17", features = ["cargo"] }
opencv = "0.93.0"

[lints.rust]
unsafe_code = "forbid"
